Fix open thread counter missing in sticky header on Firefox
Fixes the open thread counter and the merge request title missing at a
specific breakpoint in Firefox.

https://gitlab.com/gitlab-org/gitlab/-/issues/580216

--- a/app/assets/stylesheets/framework/application-chrome.scss
+++ b/app/assets/stylesheets/framework/application-chrome.scss
@@ -499,7 +499,7 @@
 
     // Legacy merge request sticky header (Firefox)
     .issue-sticky-header.merge-request-sticky-header .issue-sticky-header-text {
-      @apply gl-px-6 @xl/panel:gl-px-4;
+      @apply gl-px-3;
     }
 
     // Issue boards height
